Fixed issue with FillArray and FillArrayNoDelete
- Fixed issue with FillArray and FillArrayNoDelete and removed protocol variants.
- Updated Unit tests to reflect FillArray Changes
- Updated MockProtocol to correctly handle FillArray data structure.
- Enabled Documentation generation for NuGet package.
- Updated Icon
- Updated README.md

--- a/AuctusClassLibrary/AuctusClassLibrary.csproj
+++ b/AuctusClassLibrary/AuctusClassLibrary.csproj
@@ -22,6 +22,7 @@
     <PackageIcon>Icon.png</PackageIcon>
     <RepositoryType></RepositoryType>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
