Check if Coverlet has been restored

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,7 @@ jobs:
           New-Item -Path .\.sonar\scanner -ItemType Directory
           dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
       - name: Install Coverlet
+        if: steps.cache-coverlet.outputs.cache-hit != 'true'
         shell: powershell
         run: |
           New-Item -Path .\.coverlet -ItemType Directory
