--- a/AuctusClassLibrary/AuctusClassLibrary.csproj
+++ b/AuctusClassLibrary/AuctusClassLibrary.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net462</TargetFramework>
@@ -6,7 +6,6 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>Auctus Class Library</Title>
     <Authors>Zamberetta</Authors>
-	<VersionPrefix>1.0.1</VersionPrefix>
     <Company />
 	<NeutralLanguage>en</NeutralLanguage>
     <EnableNETAnalyzers>True</EnableNETAnalyzers>
@@ -24,8 +23,9 @@
     <RepositoryType></RepositoryType>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <FileVersion>$(VersionPrefix)</FileVersion>
-    <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
+    <FileVersion>$(Version)</FileVersion>
+    <AssemblyVersion>$(Version)</AssemblyVersion>
+	<Version>1.0.0</Version>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
